src/styles.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  	margin: 0;
  	padding: 0;
  	border: 0;
  	font-size: 100%;
  	font: inherit;
  	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	  display: block;
}
ol, ul {
	  list-style: none;
}
blockquote, q {
	  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  	content: '';
  	content: none;
}
table {
  	border-collapse: collapse;
  	border-spacing: 0;
}
/*     end reset     */

html {
    height: 100%;
}
body {
    height: 100%;
    background-image: url("https://s-media-cache-ak0.pinimg.com/originals/cd/96/10/cd9610bb19ba301dfecc7aa7b254dd0d.jpg");
    background-size: cover;
    background-repeat: no-repeat;
}
.navbar {
    width: 100%;
    height: 4.5vw;
    background-color: #302044;
    font-size: 4vw;
    color: white;
    display: inline-block;
}
.navItem {
  display: inline-block;
}
.flexContainer {
    display: flex;
    min-width: 600px;
  	min-height: calc(690px * (90/150));
  	height: 90vh;
    display: -moz-box;
    display: -ms-flexbox;
    justify-content: space-between;
    overflow: scroll;
}
.weatherColumn {
    min-width: 0;
    width: 40%;
    margin: 10px;
    display: block;
    color: white;
}
.repeatInfo {
    margin-top: 3vh;
    background-color: #203f72;
    opacity: 0.85;
}
.date {
    font-size: 2.4vw;
    color: black;
}
.time {
    font-size: 2.2vw;
}
.temp {
    margin-left: 30%;
}
.condition {
    height: 100%;
    width:100%;
}
.highLow {
    color: black;
    font-size: 2.4vw;
}

